# python_template

./: .bumpversion.cfg  .gitignore  CHANGELOG.md  CHANGELOG.rst  CODEOWNERS  LICENSE  README.md  STYLE.md  STYLE.rst  cookiecutter.json  copier.yaml  noxfile.py  pyproject.toml  readthedocs.yml  setup.py
docs/sphinx/: Makefile  api.rst  conf.py  index.md  index.rst  intro.rst  requirements.txt  requirements_template_docs.txt  standards.rst  style.md
docs/sphinx/_static/: custom.css
docs/sphinx/style/: STYLE_v1.rst  STYLE_v2.md
docs/sphinx/v1/: v1.rst
etc/: python_template.module
hooks/: post_gen_project.py  pre_gen_project.py
licenses/: Apache-2.0  GPL-3.0-or-later  MIT
python/python_template/: __init__.py  main.py
style/: STYLE_v1.rst  STYLE_v2.md
template/: .gitignore  CHANGELOG.md.jinja  CODEOWNERS.jinja  Dockerfile.jinja  LICENSE  README.md.jinja  noxfile.py  post_copy.py  pyproject.toml.jinja
template/.github/workflows/: docker.yml.jinja  lint.yml  release.yml.jinja  test.yml  test.yml.jinja
template/docs/sphinx/: Makefile.jinja  changelog.md  conf.py.jinja  index.rst.jinja  requirements.txt
template/src/{{package_name}}/: __init__.py.jinja
template/tests/: test_{{package_name}}.py.jinja
{{cookiecutter.package_name}}/: .coveragerc  .gitignore  .travis.yml  CHANGELOG.rst  MANIFEST.in  README.md  setup.cfg  setup.py
{{cookiecutter.package_name}}/docs/sphinx/: api.rst  conf.py  index.rst
{{cookiecutter.package_name}}/poetry/: pyproject.toml
{{cookiecutter.package_name}}/python/{{cookiecutter.package_name|lower}}/: __init__.py
{{cookiecutter.package_name}}/setup_cfg/: setup.cfg
{{cookiecutter.package_name}}/tests/: test_main.py
{{cookiecutter.repo_name}}/: .bumpversion.cfg  .coveragerc  .travis.yml  CHANGELOG.rst  CODEOWNERS  README.md  README.rst  STYLE.md  STYLE.rst  pyproject.toml  readthedocs.yml  requirements.txt  requirements_doc.txt  setup.cfg  setup.py  tasks.py  tox.ini
{{cookiecutter.repo_name}}/.github/workflows/: test.yml
{{cookiecutter.repo_name}}/docs/sphinx/: api.rst  conf.py  index.rst  intro.rst
{{cookiecutter.repo_name}}/docs/sphinx/_static/: custom.css
{{cookiecutter.repo_name}}/docs/sphinx/_templates/: fulltoc.html
{{cookiecutter.repo_name}}/etc/: {{cookiecutter.package_name}}.module
{{cookiecutter.repo_name}}/poetry/: .flake8  build.py  cli.py  create_setup.py  pyproject.toml  pytest.ini
{{cookiecutter.repo_name}}/python/python_template/test/: test_main.py
{{cookiecutter.repo_name}}/python/{{cookiecutter.package_name|lower}}/: __init__.py
{{cookiecutter.repo_name}}/python/{{cookiecutter.package_name|lower}}/core/: exceptions.py
{{cookiecutter.repo_name}}/python/{{cookiecutter.package_name|lower}}/utils/: logger.py
{{cookiecutter.repo_name}}/python/{{cookiecutter.package_name}}/: __init__.py  main.py
{{cookiecutter.repo_name}}/python/{{cookiecutter.package_name}}/core/: exceptions.py
{{cookiecutter.repo_name}}/python/{{cookiecutter.package_name}}/misc/: logger.py
{{cookiecutter.repo_name}}/python/{{cookiecutter.package_name}}/test/: conftest.py  test_main.py
{{cookiecutter.repo_name}}/python/{{cookiecutter.package_name}}/tests/: conftest.py  test_main.py
{{cookiecutter.repo_name}}/setup_cfg/: MANIFEST.in  setup.cfg
