[tool.poetry]
name = "basecam"
version = "0.1.0dev"
description = "{{cookiecutter.short_description}}"
license = "BSD-3-Clause"
homepage = "https://github.com/sdss/{{cookiecutter.repo_name}}"
documentation = "https://sdss-{{cookiecutter.repo_name}}.readthedocs.org"
authors = ["{{cookiecutter.full_name}} <{{cookiecutter.email}}>"]
keywords = ["astronomy", "software"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Topic :: Documentation :: Sphinx",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
readme = "README.rst"
include = ["python/{{cookiecutter.repo_name}}/etc/*"]
packages = [
    { include = "{{cookiecutter.repo_name}}", from = "python" },
]

[tool.poetry.dependencies]
python = "^3.7"
pyyaml = "^5.1"
pygments = "^2.4"
sdss-tree = "^2.15.2"
sdss-access = "^0.2.3"

[tool.poetry.dev-dependencies]
pytest = "^5.0"
pytest-cov = "^2.4"
pytest-sugar = "^0.9"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
